--- a/templates/index.html
+++ b/templates/index.html
@@ -96,7 +96,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">About Us</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>Smart App is building technology to simplify check-ins everywhere — at the main gate of a housing society, the reception area of a start-up, even the entrance of a mall. Our flagship solution, launched in 2016, currently facilitates over 1 million check-in requests every day at thousands of gated premises across the 11 cities in which we operate, and continues to show rapid growth.
+    <p>Smart App is building technology to simplify check-ins everywhere — at the main gate of a housing society, the reception area of a start-up, even the entrance of a mall. Our flagship solution currently facilitates over 1 million check-in requests every day at thousands of gated premises and continues to show rapid growth.
 
       We’re also working on/launched products to benefit the occupants, management and other stakeholders of the gated premises we work with, such as an ERP tool and a system for eCommerce players to better manage their deliveries.
     </p>
@@ -111,7 +111,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-row-padding"  style="margin:0 -16px">
       <div class="w3-half w3-margin-bottom">
         <a href="/update">
-               <img src="{% static 'images/up.png' %}" alt="cart_items" style="width:50px;height:50px;">
+               <img src="{% static 'images/up.png' %}" alt="edit profile" style="width:50px;height:50px;">
             </a>
         <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
           <li class="w3-dark-grey w3-xlarge w3-padding-32">Hi {{first_name}}</li>
