--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -3,9 +3,9 @@
 <br />
 <div class="alert alert-success" role="alert">
 	<div class="container">
-  <div class="jumbotron pl">
+  <div class="jumbotron ">
     <h1><center>Password changed successfully !!</center></h1><br>
-    <br><br><br><br><br><br><br>
+  
     <h3><center><a class="btn btn-primary  pl " href="/index">HOME</a></center></h3>
 </div>
 </div>
