--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,11 @@
 	
 
 
+
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> -->
+  
+
+
 	</head>
 <style>
 body {
