--- a/templates/display.html
+++ b/templates/display.html
@@ -81,7 +81,26 @@
 				
 		{% endfor %}
 		 </tr>
+</tbody></table>
+	</div>
 
+</div>
+		<div class="pagination" >
+				<ul style="margin-left: 40%">
+					
+					{% if details.has_previous %}
+					<li style="display:inline-flex"><a href="?page={{ details.previous_page_number }}" style="color:yellow">Previous &nbsp</a></li>
+					{% endif %}
+					{% for pg in details.paginator.page_range %}
+					{% if details.number == pg %}
+			<a href="?page={{ pg }}" style="color:yellow">{{ pg }}</a>
+				
+					{% endif %}
+					{% endfor %}
+					{% if details.has_next %}
+					<li style="display:inline-flex"><a href="?page={{ details.next_page_number }}" style="color:yellow"> &nbsp Next  </a></li>
+					{% endif %}
+				</ul>
 		</div>
 
 	{% endblock %}
