--- a/templates/show.html
+++ b/templates/show.html
@@ -30,16 +30,39 @@
 		{% for x in details %}
 					
 				{% if  user.username == x.aut %}
+					
 					<tr>
-						<td style="color:yellow">SERVICE REQUESTED :</td>
-       					 <td> {{ x.body }}</td>			
-			 		</tr>
+						<td style="color:yellow">SERVICE REQUESTED :</td> 
+       					  <td> 
+								{{ x.body }}
+							 </td>			 
+			 		 </tr> 
 				{% endif %}	
 					
 				
 		{% endfor %}
 		
+		
+		</tbody></table>
+	</div></body>	
+	<div class="pagination" >
+			<ul style="margin-left: 40%">
+				
+				{% if details.has_previous %}
+				<li style="display:inline-flex"><a href="?page={{ details.previous_page_number }}" style="color:yellow">Previous &nbsp</a></li>
+				{% endif %}
+				{% for pg in details.paginator.page_range %}
+				{% if details.number == pg %}
+		<a href="?page={{ pg }}" style="color:yellow">{{ pg }}</a>
+			
+				{% endif %}
+				{% endfor %}
+				{% if details.has_next %}
+				<li style="display:inline-flex"><a href="?page={{ details.next_page_number }}" style="color:yellow"> &nbsp Next  </a></li>
+				{% endif %}
+			</ul>
+	</div>
 
-		</div>
+	</div>
 
 	{% endblock %}
