--- a/templates/index.html
+++ b/templates/index.html
@@ -115,10 +115,10 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
             </a>
         <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
           <li class="w3-dark-grey w3-xlarge w3-padding-32">Hi {{first_name}}</li>
-          <li class="w3-padding-16">USER NAME : {{username}}</li>
-          <li class="w3-padding-16">FLAT NUMBER : {{flat_number}}</li>
-          <li class="w3-padding-16">MOBILE NUMBER : {{mobile_number}}</li>
-          <li class="w3-padding-16">EMAIL : {{email}}</li>
+          <li class="w3-padding-16"><strong>USER NAME </strong>: {{username}}</li>
+          <li class="w3-padding-16"><strong>FLAT NUMBER </strong>: {{flat_number}}</li>
+          <li class="w3-padding-16"><strong>MOBILE NUMBER</strong> : {{mobile_number}}</li>
+          <li class="w3-padding-16"><strong>EMAIL</strong> : {{email}}</li>
         </ul>
       </div>
       	{% endif %} 
