--- a/templates/display.html
+++ b/templates/display.html
@@ -89,7 +89,7 @@
 				<ul style="margin-left: 40%">
 					
 					{% if details.has_previous %}
-					<li style="display:inline-flex"><a href="?page={{ details.previous_page_number }}" style="color:yellow">Previous &nbsp</a></li>
+					<li style="display:inline-flex"><a href="?page={{ details.previous_page_number }}" style="color:yellow"><strong><<</strong> &nbsp &nbsp</a></li>
 					{% endif %}
 					{% for pg in details.paginator.page_range %}
 					{% if details.number == pg %}
@@ -98,7 +98,7 @@
 					{% endif %}
 					{% endfor %}
 					{% if details.has_next %}
-					<li style="display:inline-flex"><a href="?page={{ details.next_page_number }}" style="color:yellow"> &nbsp Next  </a></li>
+					<li style="display:inline-flex"><a href="?page={{ details.next_page_number }}" style="color:yellow"><strong>&nbsp &nbsp >></strong>   </a></li>
 					{% endif %}
 				</ul>
 		</div>
