--- a/templates/board_element_confirm_delete.html
+++ b/templates/board_element_confirm_delete.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'ex.html' %}
 
 {% block page_content %}
 
 <br />
-<h3>sure wanna delete?</h3>
+<h3>Are you sure you want to delete?</h3>
 <form  method="POST">
 
     <div  >
@@ -12,10 +12,10 @@
 
 
 
-<button class="btn btn-danger" type="submit">yes</button>
+<button class="butto " type="submit">yes</button>
+<br>
 
-
-<a href="../" class="btn btn-success">cancel</a>
+<a href="/h" class="butt pl" style="text-decoration: none">cancel</a>
 
 </form>
 
