--- a/templates/ask.html
+++ b/templates/ask.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "ex.html" %}
 {% load static %}
 
 {% block page_content %}
@@ -12,27 +12,35 @@
 
 
         <body>
+            <div class="jumbotron" style="background-color:lightgray">
+                <h1><center>Add Post</center></h1>
+                
+              
+                  <hr>
+                  <h3><center><a class="btn btn-primary  pl " href="/index" style="float:left">HOME</a></center></h3>
+              </div>
+              
    
             <div style="padding :2%"> 
-               <h1 id="colorlib-logo" class="mb-4" >Ask form</h1>
+              
              {% load widget_tweaks %}
              <form class="form-signin" method="POST">
                  {% csrf_token %}
              <div >
                  <div >
                    <div action="#" >
-                     <div class="form-group">
+                     <div class="form-group pl">
                          {% render_field form.title  type="text" class="form-control" placeholder="Title"%}
                      </div>
-                     <div class="form-group">
+                     <div class="form-group pl">
                          {% render_field form.body type="textarea" type="text" class="form-control" placeholder="Description"%}
                      </div>
-                     <div class="form-group" style="  visibility: hidden;">
+                     <div class="form-group pl" style="  visibility: hidden;">
                          {% render_field form.aut  type="text" class="form-control" %}
                      </div>
                    
                      <div class="form-group">
-                       <input type="submit" value="Submit" class="btn btn-primary py-3 px-5">
+                       <input type="submit" value="Submit" class="butt">
                      </div>
                    </form>
                  
