--- a/templates/b_detail.html
+++ b/templates/b_detail.html
@@ -1,11 +1,19 @@
-{% extends "base.html" %}
+{% extends "ex.html" %}
 {% block page_content %}
+<div class="jumbotron" style="background-color:lightgray">
+        <h1><center>Details</center></h1>
+        
+      
+          <hr>
+          <h3><center><a class="btn btn-primary  pl " href="/index" style="float:left">HOME</a></center></h3>
+      </div>
+      
 <div class="">
-    <h1 ><b>{{ post.title }}</b></h1>
+    <h1 ><b>{{ post.title }}</b></h1><hr>
     <h5><b>posted by :{{ post.aut }}</b></h1>
     <small>
-        {{ post.created_on.date }} |&nbsp;
-        Categories:&nbsp;
+        {{ post.created_on.date }}
+       
   
     </small>
     <p style="background: whitesmoke ; padding: 1%; margin :2%">{{ post.body }}</p>
@@ -13,35 +21,35 @@
     {% if user.username == post.aut or user.is_superuser %}
     
     <form action="delete" style="display: inline-block;margin: 1%">
-        <button  class ='btn btn-danger'>delete</button>
+        <button  class ='butto'>delete</button>
     </form>
     <form action="edit" style="display: inline-block;margin: 1%">
-            <button  class="btn btn-outline-success">edit</button>
+            <button  class="button">edit</button>
         </form>
     {% endif %}
     
     
-    
+  <!--   action="/{{ post.pk }}/"  -->
     <h3>Leave a comment:</h3>
-    <form action="/QandA/{{ post.pk }}/" method="post">
+    <form  method="post">
         {% csrf_token %}
         <div class="form-group">
             {{ form.author }}
         </div>
-        <div class="form-group">
+        <div class="form-group cl">
            <p  style="padding: 1%; margin :1%">{{ form.body }}</p> 
         </div>
-        <button type="submit" class="btn btn-secondary">Submit</button>
+        <button type="submit" class="butt" >Submit</button>
     </form>
  
-    <h3>Comments:</h3>
+    <h3  class="cl">Comments:</h3>
     {% for comment in comments %}
-    <p>
+    <p  class="cl">
         On {{comment.created_on.date }}&nbsp;
         <b>{{ comment.author }}</b> wrote:
 
     </p>
-    <p style="background-color: whitesmoke">{{ comment.body }}</p>
+    <p style="background-color: whitesmoke" >{{ comment.body }}</p>
     <hr>
     {% endfor %}
     
