--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,8 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<script src='https://kit.fontawesome.com/a076d05399.js'></script>
 <style>
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 .w3-row-padding img {margin-bottom: 12px}
@@ -45,6 +47,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <i class="fa fa-male w3-xxlarge"></i>
     <p>SERVICES</p>
   </a>
+   <a href="/h" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+    <i class="  fas fa-bullhorn w3-xxlarge"></i>
+    <p>NOTICES</p>
+  </a>
+
   <a href="{% url 'password_change' %}" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-refresh w3-xxlarge"></i>
     <p>CHANGE PASSWORD</p>
@@ -76,6 +83,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <a href="#about" class="w3-bar-item w3-button" style="width:25% !important">ME</a>
     <a href="/register" class="w3-bar-item w3-button" style="width:25% !important">SHOP</a>
     <a href="/req" class="w3-bar-item w3-button" style="width:25% !important">SERVICES</a>
+    <a href="/h" class="  fas fa-bullhorn w3-button" style="width:25% !important">NOTICES</a>
     <a href="{% url 'password_change' %}"  class="w3-bar-item w3-button" style="width:25% !important">CHANGE PASSWORD</a>
     <a href="{% url 'logout' %}" class="w3-bar-item w3-button" style="width:25% !important">SIGNOUT</a>
     {% endif %}
