--- a/templates/wall.html
+++ b/templates/wall.html
@@ -1,7 +1,13 @@
-{% extends "base.html" %}
+{% extends "ex.html" %}
 {% block page_content %}
-<h1 >Discussion</h1>
-<hr />
+<div class="jumbotron" style="background-color:lightgray">
+	<h1><center>Notices</center></h1>
+	
+
+    <hr>
+    <h3><center><a class="btn btn-primary  pl " href="/index" style="float:left">HOME</a></center></h3>
+</div>
+<br><br>
 <div class="row">
     {% for post in posts %}
 
@@ -23,7 +29,7 @@
           </p>
       </div>
       <p class="mb-4">{{ post.body |slice:100  }}</p>
-      <p><a href="{% url 'QandA_detail' post.pk%}" class="btn-custom">Read More <span class="ion-ios-arrow-forward"></span></a></p>
+      <p><a href="{% url 'b_detail' post.pk%}" class="btn-custom">Read More <span class="ion-ios-arrow-forward"></span></a></p>
     </div>
             </div>
         </div>
