--- a/templates/wall.html
+++ b/templates/wall.html
@@ -6,6 +6,7 @@
 
     <hr>
     <h3><center><a class="btn btn-primary  pl " href="/index" style="float:left">HOME</a></center></h3>
+    <h3><center><a class="btn btn-success  pl " href="/Ask"  style="float:right">ADD</a></center></h3>
 </div>
 <br><br>
 <div class="row">
