--- a/templates/b_detail.html
+++ b/templates/b_detail.html
@@ -46,7 +46,7 @@
     {% for comment in comments %}
     <p  class="cl">
         On {{comment.created_on.date }}&nbsp;
-        <b>{{ comment.author }}</b> wrote:
+        <b>{{ comment.author }}</b> ,wrote:
 
     </p>
     <p style="background-color: whitesmoke" >{{ comment.body }}</p>
