--- a/templates/log.html
+++ b/templates/log.html
@@ -36,12 +36,14 @@ body {
   text-align: center;
   border-radius: 10px;
   border: 3px solid black;
-  background-color: yellow
+  background-color: yellow;
+  box-shadow: 0 4px 8px 0 rgb(245, 240, 240);
 }
 .button:hover {
   background-color: black;
   color:yellow;
-  font-size:20px;
+  font-size:16px;
+  box-shadow: 0 8px 16px 0 rgb(231, 31, 31);
 }
 .cl{
   color:white;
