--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -6,11 +6,18 @@
 
 <body>
 
+<div class="jumbotron" style="background-color:lightgray">
+	<h1><center>Change Password</center></h1>
+	
+
+    <hr>
+    <h3><center><a class="btn btn-primary  pl " href="/index" style="float:left">HOME</a></center></h3>
+</div>
 
 
 
        <div style="padding :2%"> 
-        <h1 id="colorlib-logo" class="mb-4 pl" >change password</h1>
+        
       {% load widget_tweaks %}
       <form class="form-signin" method="POST">
           {% csrf_token %}
