--- a/templates/buy2.html
+++ b/templates/buy2.html
@@ -23,9 +23,9 @@
 
 
 <div class="container-fluid" style="padding-left: 20px;padding-right: 20px;">
-	<div class="row">
+	<div class="row ">
 		<a href="/list">
-  		<img src="{% static 'images/pic.png' %}" alt="cart_items" style="width:50px;height:50px;">
+  		<img src="{% static 'images/pic.png' %}" cart_items" style="width:50px;height:50px; ">
 </a>
 		<form class="form-signin" method="POST" >
                  {% csrf_token %}
