--- a/templates/ex.html
+++ b/templates/ex.html
@@ -87,6 +87,21 @@ body {
   border: 3px solid black;
   background-color: yellow
 }
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgb(7, 6, 6);
+  transition: 0.3s;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgb(231, 31, 31);
+}
+
+/* Add some padding inside the card container */
+.container {
+  padding: 2% 10%;
+}
 </style>
 
 {% block page_content %}
