--- a/templates/shopping.html
+++ b/templates/shopping.html
@@ -34,12 +34,14 @@ body {
   text-align: center;
   border-radius: 10px;
   border: 3px solid black;
-  background-color: yellow
+  background-color: yellow;
+  box-shadow: 0 4px 8px 0 rgb(16, 212, 130);
 }
 .button:hover {
   background-color: black;
   color:yellow;
-  font-size:20px;
+  font-size:17px;
+  box-shadow: 0 8px 16px 0 rgb(231, 31, 31);
 }
 .hs{
   height:10%;
