--- a/templates/buy2.html
+++ b/templates/buy2.html
@@ -20,16 +20,25 @@
 <div class="flex-container ">
 <h1>&nbsp<br><br></h1>
 </div>
-<div class="flex-container " style="height:70px;">
-	<h1 class=" pl" > <center><b>Shopping List</b></center></h1>
+<div class="jumbotron" style="background-color:lightgray">
+	<h1><center>SHOPPING LIST</center></h1>
+	
+
+    <hr>
+    <h3><center><a class="btn btn-primary  pl " href="/index" style="float:left">HOME</a></center></h3>
+    <h3><a href="/list">
+  		<img src="{% static 'images/pic.png' %}" alt="cart items" style="width:60px;height:60px;float:right; ">
+</a></h3>
 </div>
+
+<!-- <div class="flex-container " style="height:70px;">
+	<h1 class=" pl" > <center><b>Shopping List</b></center></h1>
+</div> -->
 
 
 <div class="container-fluid" style="padding-left: 20px;padding-right: 20px;">
 	<div class="row ">
-		<a href="/list">
-  		<img src="{% static 'images/pic.png' %}" alt="cart items" style="width:50px;height:50px; ">
-</a>
+		
 		<form class="form-signin" method="POST" >
                  {% csrf_token %}
                 <div class="form-group"  style="  visibility: hidden;">
