--- a/templates/ex.html
+++ b/templates/ex.html
@@ -49,7 +49,7 @@
  
 <style>
 body {
-	background-image: url('{% static 'images/gradient_crystal_o2.jpg' %}');
+	background-image: url('{% static 'images/sk.jpg' %}');
         background-repeat:repeat;
        background-size:cover;
 } 
