--- a/templates/ask.html
+++ b/templates/ask.html
@@ -22,7 +22,9 @@
                   <hr>
                   <h3><center><a class="btn btn-primary  pl " href="/index" style="float:left">HOME</a></center></h3>
               </div>
-              
+              <div class="row">
+        <div class="col-md-3"></div>
+
    
             <div style="padding :2%"> 
               
@@ -48,8 +50,8 @@
                    </form>
                  
                  </div>
-               </from>
+             
              </div>
-                   </body>
+                    <div class="col-md-3"></div></div>
       </body>
 {% endblock %}
