--- a/templates/ask.html
+++ b/templates/ask.html
@@ -15,7 +15,7 @@
             <div class="flex-container ">
             <h1>&nbsp<br><br></h1>
             </div>
-            <div class="jumbotron" style="background-color:lightgray">
+            <div class="jumbotron" style="background-color:#a3c2c2">
                 <h1><center>Add Post</center></h1>
                 
               
