--- a/templates/index2.html
+++ b/templates/index2.html
@@ -136,7 +136,7 @@ function hasScrolled() {
               </li>
               {% if user.is_authenticated %}
               <li class="nav-item" style="display: inline-block;color:black">
-                <a class="nav-link"  href="#" >Me</a>
+                <a class="nav-link"  href="/profile"  >Me</a>
               </li>
               
               <li class="nav-item" style="display: inline-block;color:black">
@@ -163,7 +163,7 @@ function hasScrolled() {
 
  <footer >
   
- <center>Copywright YourSite All rights reserved <a href="https://www.google.co.in/">
+ <center>Copywright <b>SMART APP</b> All rights reserved <a href="https://www.google.co.in/">
   HELP-LINK</a></center>
 </footer> 
 </div>
