--- a/templates/movv.html
+++ b/templates/movv.html
@@ -13,7 +13,7 @@
  </head>
 <body>
 
-<div class="jumbotron" style="background-color:lightgray">
+<div class="jumbotron" style="background-color:#a3c2c2">
 	<h1><center>ORDERED ITEMS</center></h1>
 	
 
