--- a/templates/shopping.html
+++ b/templates/shopping.html
@@ -186,7 +186,7 @@ function hasScrolled() {
               </li>
               {% if user.is_authenticated %}
               <li class="nav-item" style="display: inline-block;color:black">
-                <a class="nav-link"  href="#" >Me</a>
+                <a class="nav-link"  href="/profile" >Me</a>
               </li>
               
               <li class="nav-item" style="display: inline-block;color:black">
