--- a/templates/Ask_form.html
+++ b/templates/Ask_form.html
@@ -16,7 +16,7 @@
 <h1>&nbsp<br><br></h1>
 </div>
 
-            <div class="jumbotron" style="background-color:lightgray">
+            <div class="jumbotron" style="background-color:#a3c2c2">
   <h1><center>SERVICE</center></h1>
   
 
