--- a/templates/b_detail.html
+++ b/templates/b_detail.html
@@ -4,7 +4,7 @@
 <div class="flex-container ">
 <h1>&nbsp<br><br></h1>
 </div>
-<div class="jumbotron" style="background-color:lightgray">
+<div class="jumbotron" style="background-color:#a3c2c2">
         <h1><center>Details</center></h1>
         
       
