--- a/templates/buy2.html
+++ b/templates/buy2.html
@@ -20,7 +20,7 @@
 <div class="flex-container ">
 <h1>&nbsp<br><br></h1>
 </div>
-<div class="jumbotron" style="background-color:lightgray">
+<div class="jumbotron" style="background-color:#a3c2c2">
 	<h1><center>SHOPPING LIST</center></h1>
 	
 
