--- a/templates/index.html
+++ b/templates/index.html
@@ -120,7 +120,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-row-padding"  style="margin:0 -16px">
       <div class="w3-half w3-margin-bottom">
         <a href="/update">
-               <img src="{% static 'images/up.png' %}" alt="edit profile" style="width:50px;height:50px;">
+               <img src="{% static 'images/edi.png' %}" alt="edit profile" style="width:50px;height:50px;">
             </a>
         <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
           <li class="w3-dark-grey w3-xlarge w3-padding-32">Hi {{first_name}}</li>
