--- a/templates/pro.html
+++ b/templates/pro.html
@@ -5,22 +5,63 @@
 
 
 <body>
-<div class="w3-half w3-margin-bottom">
-        <a href="/update">
-               <img src="{% static 'images/up.png' %}" alt="edit profile" style="width:50px;height:50px;">
-            </a>
-        <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
-          <li class="w3-dark-grey w3-xlarge w3-padding-32">Hi {{first_name}}</li>
-          <li class="w3-padding-16"><strong>USER NAME </strong>: {{username}}</li>
-          <li class="w3-padding-16"><strong>FLAT NUMBER </strong>: {{flat_number}}</li>
-          <li class="w3-padding-16"><strong>MOBILE NUMBER</strong> : {{mobile_number}}</li>
-          <li class="w3-padding-16"><strong>EMAIL</strong> : {{email}}</li>
-        </ul>
-      </div>
+
+<div class="flex-container ">
+<h1>&nbsp<br><br></h1>
+</div>
+<div class="row">
+  <div class="col-md-3"></div>
+  
+ <div class="col-md-4">
+
+ <div class="card pl" style="background-color: black;color:#66ffe0;">
+  <h3 style="margin-left: auto;
+    margin-right: auto;font-family: Kaushan Script;" >My Profile</h3>
+   <a href="/update">
+               <img src="{% static 'images/edi.png' %}" alt="edit profile" style="width:50px;height:50px;float:right">
+    </a>
+
+     
+  
+  
+
+<div class="container">
+             
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th>Hi <b>{{first_name}}</b></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td><strong>USER NAME </strong>:</td>
+        <td>{{username}}</td>
+        
+      </tr>
+      <tr>
+        <td><strong>FLAT NUMBER </strong>: </td>
+        <td>{{flat_number}}</td>
+    
+      </tr>
+      <tr>
+        <td><strong>MOBILE NUMBER</strong> : </td>
+        <td>{{mobile_number}}</td>
+      </tr>
+       <tr>
+        <td><strong>EMAIL</strong> : </td>
+        <td>{{email}}</td>
+      </tr>
+      
+    </tbody>
+  </table>
+</div>
 
 
 
 
 
+<div class="col-md-3"></div>
+</div></div></div>
       </body>
 {% endblock %}
