--- a/templates/Ask_form.html
+++ b/templates/Ask_form.html
@@ -27,18 +27,25 @@
 </a></h3>
 </div>
 
-  
+        <div class="row">
+          <div class="col-md-3"></div>
+
              <form class="form-signin pl" method="POST" >
                  {% csrf_token %}
                  <div class="form-group"  style="  visibility: hidden;">
                   {% render_field form.aut  type="text" class="form-control" placeholder="Title"%}
               </div>
-
-            Preferred time : {{form.flat_number}}<hr />
-            Service description :<br> {{form.body}}
+                <div class="form-group"  >
+                 Preferred time : {{form.flat_number}}
+              </div>
+             <div class="form-group"  >
+                Service description :<br> {{form.body}}
+              </div>
+            
           <hr />
-            <input type="submit" value="Submit" class="button" >
+            <input type="submit" value="Submit" class="button" style="display:inline">
                </form>
+               <div class="col-md-3"></div></div>
              </div>
                    </body>
       </body>
