--- a/templates/Ask_form.html
+++ b/templates/Ask_form.html
@@ -36,10 +36,13 @@
                   {% render_field form.aut  type="text" class="form-control" placeholder="Title"%}
               </div>
                 <div class="form-group"  >
-                 Preferred time : {{form.flat_number}}
+             <input type="text" name="flat_number" class="form-control" placeholder="Preferred time ">
+                
               </div>
              <div class="form-group"  >
-                Service description :<br> {{form.body}}
+                <textarea placeholder="Service Description" rows="5" cols="60" class="form-control" name="body" ></textarea>
+                 
+                   
               </div>
             
           <hr />
