--- a/templates/display.html
+++ b/templates/display.html
@@ -20,7 +20,7 @@
 	
 
     <hr>
-    <h3><center><a class="btn btn-primary  pl " href="/index" style="float:left">HOME</a></center></h3>
+    <h3><center><a class="btn btn-primary  pl " href="/shop" style="float:left">BACK</a></center></h3>
 </div>
 <div class="container-fluid" style="padding-left: 20px;padding-right: 20px;">
 	<div class="row pl" >
