--- a/templates/Ask_form.html
+++ b/templates/Ask_form.html
@@ -10,22 +10,15 @@
 
  <body>
 
-
-        <body>
-            <div class="flex-container ">
-<h1>&nbsp<br><br></h1>
-</div>
-
-            <div class="jumbotron" style="background-color:#a3c2c2">
-  <h1><center>SERVICE</center></h1>
-  
-
+<div class="jumbotron" style="background-color:#a3c2c2">
+  <h1><br><center>SERVICE</center></h1>
     <hr>
-    <h3><center><a class="btn btn-primary  pl " href="/index" style="float:left">HOME</a></center></h3>
+    <h3><a class="btn btn-primary  pl " href="/index" style="float:left">HOME</a></h3>
     <h3><a href="/show">
-      <img src="{% static 'images/service.png' %}" alt="cart_items" style="width:60px;height:60px;float:right; ">
+      <img src="{% static 'images/service.png' %}" alt="service" style="width:60px;height:60px;float:right; ">
 </a></h3>
 </div>
+
 
         <div class="row">
           <div class="col-md-3"></div>
