--- a/templates/b_detail.html
+++ b/templates/b_detail.html
@@ -1,16 +1,15 @@
 {% extends "ex.html" %}
 {% block page_content %}
 
-<div class="flex-container ">
-<h1>&nbsp<br><br></h1>
-</div>
+
+
 <div class="jumbotron" style="background-color:#a3c2c2">
-        <h1><center>Details</center></h1>
-        
-      
-          <hr>
-          <h3><center><a class="btn btn-primary  pl " href="/h" style="float:left">BACK</a></center></h3>
-      </div>
+    <h1><br><center>Details</center></h1>
+    <hr>
+    <h3><a class="btn btn-primary  pl " href="/h" style="float:left">BACK</a></h3>
+</div>
+
+
 <div class="row">
   <div class="col-md-3"></div>
 
