--- a/templates/buy2.html
+++ b/templates/buy2.html
@@ -17,24 +17,16 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="flex-container ">
-<h1>&nbsp<br><br></h1>
-</div>
-<div class="jumbotron" style="background-color:#a3c2c2">
-	<h1><center>SHOPPING LIST</center></h1>
-	
 
+
+<div class="jumbotron" style="background-color:#a3c2c2">
+	<h1><br><center>SHOPPING LIST</center></h1>
     <hr>
-    <h3><center><a class="btn btn-primary  pl " href="/index" style="float:left">HOME</a></center></h3>
+    <h3><a class="btn btn-primary  pl " href="/index" style="float:left">HOME</a></h3>
     <h3><a href="/list">
   		<img src="{% static 'images/pic.png' %}" alt="cart items" style="width:60px;height:60px;float:right; ">
 </a></h3>
 </div>
-
-<!-- <div class="flex-container " style="height:70px;">
-	<h1 class=" pl" > <center><b>Shopping List</b></center></h1>
-</div> -->
-
 
 <div class="container-fluid" style="padding-left: 20px;padding-right: 20px;">
 	<div class="row ">
