--- a/templates/display.html
+++ b/templates/display.html
@@ -12,13 +12,9 @@
   <meta charset="utf-8">
  </head>
 <body>
-<div class="flex-container ">
-<h1>&nbsp<br><br></h1>
-</div>
-<div class="jumbotron" style="background-color:#a3c2c2">
-	<h1><center>ORDERED ITEMS</center></h1>
-	
 
+<div class="jumbotron" style="background-color:#a3c2c2">
+	<h1><br><center>ORDERED ITEMS</center></h1>
     <hr>
     <h3><center><a class="btn btn-primary  pl " href="/shop" style="float:left">BACK</a></center></h3>
 </div>
