--- a/templates/edit.html
+++ b/templates/edit.html
@@ -2,12 +2,10 @@
 {% block page_content %}
 {% load widget_tweaks %}
 <body>
-  <div class="flex-container ">
-<h1>&nbsp<br><br></h1>
-</div>
-  <div class="jumbotron" style="height: 10%;background-color:#a3c2c2">
-   <p1 style="float:left"><a class="btn btn-primary  pl " href="/index">HOME</a></p1> 
-  <h1><center>EDIT PROFILE </center></h1>
+  <div class="jumbotron" style="background-color:#a3c2c2">
+  <h1><br><center>EDIT PROFILE</center></h1>
+    <hr>
+    <h3><a class="btn btn-primary  pl " href="/h" style="float:left">HOME</a></h3>
 </div>
 
 <div class="row">
