--- a/templates/show.html
+++ b/templates/show.html
@@ -12,15 +12,11 @@
   <meta charset="utf-8">
  </head>
 <body>
-<div class="flex-container ">
-<h1>&nbsp<br><br></h1>
-</div>
-<div class="jumbotron" style="background-color:#a3c2c2">
-	<h1><center>REQUESTED SERVICES</center></h1>
-	
 
+<div class="jumbotron" style="background-color:#a3c2c2">
+	<h1><br><center>REQUESTED SERVICES</center></h1>
     <hr>
-    <h3><center><a class="btn btn-primary  pl " href="/req" style="float:left">BACK</a></center></h3>
+    <h3><a class="btn btn-primary  pl " href="/req" style="float:left">BACK</a></h3>
 </div>
 <div class="container-fluid" style="padding-left: 20px;padding-right: 20px;">
 	<div class="row pl" >
