--- a/templates/wall.html
+++ b/templates/wall.html
@@ -1,17 +1,16 @@
 {% extends "ex.html" %}
 {% block page_content %}
-<div class="flex-container ">
-<h1>&nbsp<br><br></h1>
-</div>
-<div class="jumbotron" style="background-color:#a3c2c2">
-	<h1><center>Notices</center></h1>
-	
 
+
+<div class="jumbotron" style="background-color:#a3c2c2">
+  <h1><br><center>Notices</center></h1>
     <hr>
-    <h3><center><a class="btn btn-primary  pl " href="/index" style="float:left">HOME</a></center></h3>
+     <h3><center><a class="btn btn-primary  pl " href="/index" style="float:left">HOME</a></center></h3>
     <h3><center><a class="btn btn-success  pl " href="/Ask"  style="float:right">ADD</a></center></h3>
 </div>
-<br><br>
+
+
+<br>
 <div class="row">
     {% for post in posts %}
 
