done password change

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -5,7 +5,7 @@
   <div class="jumbotron" style="background-color:#a3c2c2">
   <h1><br><center>EDIT PROFILE</center></h1>
     <hr>
-    <h3><a class="btn btn-primary  pl " href="/h" style="float:left">HOME</a></h3>
+    <h3><a class="btn btn-primary  pl " href="/index" style="float:left">HOME</a></h3>
 </div>
 
 <div class="row">
