--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -39,7 +39,7 @@
               Forgot
             </span>
 
-            <a href="#" class="txt2">
+            <a href="/password_reset" class="txt2">
               User name / password?
             </a>
 <br><br><hr>
@@ -61,30 +61,6 @@
   </div>
   
       
-<!-- 
-  <div id="dropDownSelect1"></div>
-  
-
-  <script src="{% static 'bootstrap/Login_v17/vendor/jquery/jquery-3.2.1.min.js' %}"></script>
-  <script src="{% static 'bootstrap/Login_v17/vendor/animsition/js/animsition.min.js' %}"></script>
-
-  <script src="{% static 'bootstrap/Login_v17/vendor/bootstrap/js/popper.js' %}"></script>
-
-  <script src="{% static 'bootstrap/Login_v17/vendor/select2/select2.min.js' %}"></script>
-  <script>
-    $(".selection-2").select2({
-      minimumResultsForSearch: 20,
-      dropdownParent: $('#dropDownSelect1')
-    });
-  </script>
-
-<script src="{% static 'bootstrap/vendor/daterangepicker/moment.min.js' %}"></script>
-  <script src="{% static 'bootstrap/vendor/daterangepicker/daterangepicker.js' %}"></script>
-
-  <script src="{% static 'bootstrap/vendor/countdowntime/countdowntime.js' %}"></script>
-
-<script src="{% static 'bootstrap/js/main.js' %}"></script>
- -->
 </body> 
 
 
