--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -2,16 +2,14 @@
 
 {% block page_content %}
 
-<br />
+
 
 <body>
-<br><br><br>
-<div class="jumbotron" style="background-color:lightgray">
-	<h1><center>Change Password</center></h1>
-	
 
+ <div class="jumbotron" style="background-color:#a3c2c2">
+  <h1><br><center>CHANGE PASSWORD</center></h1>
     <hr>
-    <h3><center><a class="btn btn-primary  pl " href="/index" style="float:left">HOME</a></center></h3>
+    <h3><a class="btn btn-primary  pl " href="/index" style="float:left">HOME</a></h3>
 </div>
 
 
