--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,15 +1,37 @@
-{% block content %}
+{% extends 'shopping.html' %}
+{% block page_content %}
+<div class="jumbotron" style="background-color:#a3c2c2">
+  <h1><br><center>SET-UP PASSWORD </center></h1>
+    <hr>
+    <h3><a class="btn btn-primary  pl " href="/index" style="float:left">HOME</a></h3>
+</div>
   {% if validlink %}
+
+  <div class="row">
+  <div class="col-md-3"></div>
+  <div class="col-md-6">
+  <div class="flex-container pl " style="text-align: center;align-items: center">
     <h3>Change password</h3>
+    
     <form method="post">
       {% csrf_token %}
-      {{ form.as_p }}
-      <button type="submit">Change password</button>
+      
+      <div class="form-group"  >
+             <input type="password" name="new_password1" class="form-control" placeholder=" new password ">  
+              </div>
+              <div class="form-group">
+              <input type="password" name="new_password2" class="form-control" placeholder="confirm password ">   
+            </div>
+            
+      <button type="submit" class="button" style="float:right">SUBMIT</button>
     </form>
   {% else %}
-    <p>
+    <p style="color:red">
       The password reset link was invalid, possibly because it has already been used.
       Please request a new password reset.
     </p>
   {% endif %}
+  </div></div>
+  <div class="col-md-3"></div>
+</div>
 {% endblock %}
