--- a/templates/wall.html
+++ b/templates/wall.html
@@ -12,33 +12,28 @@
 
 <br>
 <div class="row">
+   <!--  <div clas="col-md-5"></div> -->
     {% for post in posts %}
 
-
-
-
-    <div class="col-md-12">
+    <div class="col-md-12 m-l-5 ">
             <div class="blog-entry ftco-animate d-md-flex">
             
                 <div class="text text-2 pl-md-4 ">
-      <h3 class="mb-2" style="color:gray">{{ post.title }}</h3>
-      <div class="meta-wrap">
-                        <p class="meta" style="color:white">
-              <span><i class="icon-calendar mr-2" aria-hidden="true"></i>{{post.created_on.date }}</span>
-              <span><i class="icon-edit mr-2" aria-hidden="true"></i>{{post.aut }}</span>
-       
-         
-                            
-          </p>
-      </div>
-      <p class="mb-4 card" style="width:50%">{{ post.body |slice:150  }}</p>
-      <p><a href="{% url 'b_detail' post.pk%}" class="btn-custom">Read More <span class="ion-ios-arrow-forward"></span></a></p>
-    </div>
+                      <h3 class="mb-2" style="color:gray">{{ post.title }}</h3>
+                      <div class="meta-wrap">
+                              <p class="meta" style="color:white">
+                              <span><i class="icon-calendar mr-2" aria-hidden="true"></i>{{post.created_on.date }}</span>
+                              <span><i class="icon-edit mr-2" aria-hidden="true"></i>{{post.aut }}</span>        </p>
+                      </div>
+                      <p class="mb-4 card" style="width:50%">{{ post.body |slice:150  }}</p>
+                      <p><a href="{% url 'b_detail' post.pk%}" class="btn-custom">Read More <span class="ion-ios-arrow-forward"></span></a></p>
+                </div>
             </div>
 
            
-        </div>
+    </div>
     {% endfor %}
+    <!-- <div clas="col-md-5"></div> -->
 </div>
 
 
