--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,19 +1,12 @@
 {% extends 'shopping.html' %}
 
 {% block page_content %}
-	<div class="jumbotron" style="background-color:#a3c2c2">
-  <h1><br><center>GO - ON</center></h1>
-    <hr>
-    <h3><a class="btn btn-primary  pl " href="/index" style="float:left">HOME</a></h3>
-</div>
-<div class="d-flex flex-wrap align-content-center" >
-  <p style="color:white;"> 
-    <b>We've emailed you instructions for setting your password, if an account exists with the email you entered.
-    You should receive them shortly.</b>
+  <p>
+    We've emailed you instructions for setting your password, if an account exists with the email you entered.
+    You should receive them shortly.
   </p>
-  <p style="color:white">
-    <b>If you don't receive an email, please make sure you've entered the address you registered with,
-    and check your spam folder.</b>
-</p>
-  </div>
+  <p>
+    If you don't receive an email, please make sure you've entered the address you registered with,
+    and check your spam folder.
+  </p>
 {% endblock %}
