--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   {% if user.is_authenticated %}
   <a href="#my" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-user w3-xxlarge"></i>
-    <p>ME</p>
+    <p>{{user.username}}</p>
   </a>
   
   <a href="/shop"  class="w3-bar-item w3-button w3-padding-large w3-hover-black">
@@ -81,7 +81,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <a href="/register" class="w3-bar-item w3-button" style="width:25% !important">SIGNUP</a>
     <a href="{% url 'login' %}" class="w3-bar-item w3-button" style="width:25% !important">SIGNIN</a>
     {% if user.is_authenticated %}
-      <a href="#about" class="w3-bar-item w3-button" style="width:25% !important">ME</a>
+      <a href="#about" class="w3-bar-item w3-button" style="width:25% !important">{{user.username}}</a>
     <a href="/register" class="w3-bar-item w3-button" style="width:25% !important">SHOP</a>
     <a href="/req" class="w3-bar-item w3-button" style="width:25% !important">SERVICES</a>
     <a href="/h" class="  fas fa-bullhorn w3-button" style="width:25% !important">NOTICES</a>
