--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,13 +1,7 @@
 {% extends 'shopping.html' %}
 
 {% block page_content %}
-<div class="jumbotron" style="background-color:#a3c2c2">
-  <h1 style="color:green"><br><center>SUCCESSFUL</center></h1>
-    <hr>
-    <h3><a class="btn btn-primary  pl " href="/index" style="float:left">HOME</a></h3>
-     <h3><a class="btn btn-primary  pl " href="/login" style="float:right">LOGIN</a></h3>
-</div>
-  <p >
-    <center style="color:white">Your password has been set. You may go ahead and <a href="{% url 'login' %}" style="font-size: 20px"><b>sign in</b></a> now.</center>
+  <p>
+    Your password has been set. You may go ahead and <a href="{% url 'signin' %}">sign in</a> now.
   </p>
 {% endblock %}
