display pic from admin

--- a/templates/b_detail.html
+++ b/templates/b_detail.html
@@ -23,7 +23,7 @@
   
     </small>
     <div class="card">
-    <p style="background: black ; padding: 1%; margin :2%; color:green">{{ post.body }}</p>
+    <p style="background: black ; padding: 1%; margin :2%; color:lightgray">{{ post.body }}</p>
     </div>
     {% if user.username == post.aut or user.is_superuser %}
     <hr>
