--- a/templates/ex.html
+++ b/templates/ex.html
@@ -259,18 +259,21 @@ function hasScrolled() {
           
   </div>
 </header>
-
+<div class="flex-container " style="margin-bottom: 8%">
 {% block page_content %}
 
 {% endblock %} 
-<!-- <div class="flex-container " style="background-color:black;color:white;width : 100%">
+</div>
+<div class="flex-container " style="background-color:black;color:white;position:fixed; left: 0; bottom: 0; width: 100%;z-index:3;height:5%;">
 
 
- <footer >
+ <footer  >
   
- <center>Copywright YourSite All rights reserved <a href="https://www.google.co.in/">
+ <center>Copywright <b>SMART APP</b> All rights reserved <a href="https://www.google.co.in/">
   HELP-LINK</a></center>
-</footer>  -->
+</footer> 
+</div>
+
 </div>
 
 </html>
