--- a/templates/index2.html
+++ b/templates/index2.html
@@ -158,10 +158,10 @@ function hasScrolled() {
 {% block page_content %}
 
 {% endblock %} 
-<div class="flex-container " style="background-color:black;color:white;width : 100%">
+<div class="flex-container " style="background-color:black;color:white; left: 0; bottom: 0; width: 100%;z-index:3;height:5%">
 
 
- <footer >
+ <footer  >
   
  <center>Copywright <b>SMART APP</b> All rights reserved <a href="https://www.google.co.in/">
   HELP-LINK</a></center>
