--- a/templates/edit.html
+++ b/templates/edit.html
@@ -34,10 +34,21 @@
   <div class="form-group cl pl">
       mobile number:{% render_field form1.mobile_number  type="number" class="form-control" placeholder="mobile number" required="" %}
   </div>
+   <div class=" cl pl">
+   <b> Choose a  profilepicture : &nbsp &nbsp </b> 
+   <input type="file" name="pro_pic"   accept="image/gif, image/jpeg, image/png" value="">
+               
+              </div>
 
-    <div class="form-group">
-        <input type="submit" value="Submit" class="btn button">
+                <div class=" cl pl"> &nbsp</div>
+     
+
+    <div class="form-group cl pl">
+        <input type="submit" value="Submit" class="btn button ">
+        <br><hr>
       </div> 
+   
+
       
 </form>
 </div>
