--- a/templates/pro.html
+++ b/templates/pro.html
@@ -10,7 +10,15 @@
 <h1>&nbsp<br><br></h1>
 </div>
 <div class="row">
-  <div class="col-md-3"></div>
+  <div class="col-md-3">
+    <div class="card pl" style="height:40%;width:50%;margin-left: 30%;background-color: white">
+  <h3 style="margin-left: auto;
+    margin-right: auto;font-family: Kaushan Script;" >My Profile</h3>
+  <img src="{{ pic.url }}" >
+  
+</div>
+
+  </div>
   
  <div class="col-md-4">
 
@@ -52,6 +60,8 @@
         <td><strong>EMAIL</strong> : </td>
         <td>{{email}}</td>
       </tr>
+      
+      
       
     </tbody>
   </table>
