--- a/templates/shopping.html
+++ b/templates/shopping.html
@@ -204,18 +204,20 @@ function hasScrolled() {
           
   </div>
 </header>
-
+<div class="flex-container " style="margin-bottom: 8%">
 {% block page_content %}
 
 
-{% endblock %}<body>
-<!-- <div class="flex-container" style="background-color:black;color:white">
+{% endblock %}
+</div><body>
+<div class="flex-container " style="background-color:black;color:white;position:fixed; left: 0; bottom: 0; width: 100%;z-index:3;height:5%;">
 
 
- <footer >
+ <footer  >
   
-  <p> <center>Copywright YourSite All rights reserved <a href="https://www.google.co.in/">
-  HELP-LINK</a></center></p>
+ <center>Copywright <b>SMART APP</b> All rights reserved <a href="https://www.google.co.in/">
+  HELP-LINK</a></center>
 </footer> 
-</div> --></body>
+</div>
+</body>
 </html>
