display pic from admin

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -34,11 +34,11 @@
   <div class="form-group cl pl">
       mobile number:{% render_field form1.mobile_number  type="number" class="form-control" placeholder="mobile number" required="" %}
   </div>
-   <div class=" cl pl">
+  <!--  <div class=" cl pl">
    <b> Choose a  profilepicture : &nbsp &nbsp </b> 
-   <input type="file" name="pro_pic"   accept="image/gif, image/jpeg, image/png" value="">
+   <input type="file" name="form1.pro_pic"   accept="image/gif, image/jpeg, image/png" value="">
                
-              </div>
+              </div> -->
 
                 <div class=" cl pl"> &nbsp</div>
      
