--- a/templates/pro.html
+++ b/templates/pro.html
@@ -13,7 +13,7 @@
   <div class="col-md-3">
     <div class="card pl" style="height:40%;width:50%;margin-left: 30%;background-color: white">
   <h3 style="margin-left: auto;
-    margin-right: auto;font-family: Kaushan Script;" >My Profile</h3>
+    margin-right: auto;font-family: Kaushan Script;" >{{ first_name}}</h3>
   <img src="{{ pic.url }}" >
   
 </div>
