--- a/templates/wall.html
+++ b/templates/wall.html
@@ -25,7 +25,7 @@
                               <span><i class="icon-calendar mr-2" aria-hidden="true"></i>{{post.created_on.date }}</span>
                               <span><i class="icon-edit mr-2" aria-hidden="true"></i>{{post.aut }}</span>        </p>
                       </div>
-                      <p class="mb-4 card" style="width:50%">{{ post.body |slice:150  }}</p>
+                      <p class="mb-4 card p-2" style="width:50%">{{ post.body |slice:150  }}</p>
                       <p><a href="{% url 'b_detail' post.pk%}" class="btn-custom">Read More <span class="ion-ios-arrow-forward"></span></a></p>
                 </div>
             </div>
