gonna change model

--- a/templates/show.html
+++ b/templates/show.html
@@ -47,8 +47,9 @@
 	
 
 	</div>
-	<div class="pagination" >
-		<ul style="margin-left: 40%">
+	<div class="pagination"   style=" left: 0; bottom: 5%; width: 100%;z-index:3; ">>
+				<ul style="margin-left: 45%">
+		
 			
 			{% if details.has_previous %}
 			<li style="display:inline-flex"><a href="?page={{ details.previous_page_number }}" style="color:yellow"><strong><<</strong> &nbsp &nbsp</a></li>
