--- a/templates/display.html
+++ b/templates/display.html
@@ -83,8 +83,8 @@
 	</div>
 
 </div>
-		<div class="pagination" >
-				<ul style="margin-left: 40%">
+		<div class="pagination"  style="position:fixed; left: 0; bottom: 5%; width: 100%;z-index:3;">>
+				<ul style="margin-left: 45%">
 					
 					{% if details.has_previous %}
 					<li style="display:inline-flex"><a href="?page={{ details.previous_page_number }}" style="color:yellow"><strong><<</strong> &nbsp &nbsp</a></li>
