corrrected model shopping

--- a/templates/display.html
+++ b/templates/display.html
@@ -29,48 +29,24 @@
 					{% if x.bread or x.water or x.milk or x.rice %}
 					<tr>
 					<td style="color:yellow">ORDERED ITEMS :</td>
-					{% if x.bread == "a" %}
-					<td>1 packet bread,</td>	
+					{% if x.bread %}
+					<td>{{x.bread}} PACKET BREAD,</td>	
 					{% endif %}
-					{% if x.bread == "f" %}
-					<td>2 packet bread,</td>	
+					{% if x.water %}
+					
+					<td>{{x.water}} CAN WATER,</td>	
 					{% endif %}
-					{% if x.bread == "g" %}
-					<td>3 packet bread,</td>	
-					{% endif %}
-
-					{% if x.water == "b" %}
-					<td>1 CAN water,</td>	
-					{% endif %}
-					{% if x.water == "h" %}
-					<td>2 CAN water,</td>	
-					{% endif %}
-					{% if x.water == "i" %}
-					<td>3 CAN water,</td>	
-					{% endif %}
+					
 
 
-					{% if x.milk == "c" %}
-					<td>1 packet milk,</td>	
-					{% endif %}
-					{% if x.milk == "d" %}
-					<td>2 packet milk,</td>	
-					{% endif %}
-					{% if x.milk == "e" %}
-					<td>3 packet milk,</td>	
+					{% if x.milk  %}
+					
+					<td>{{x.milk}}  PACKET MILK,</td>	
 					{% endif %}
 
-					{% if x.rice == "j" %}
-					<td>1 kg rice,</td>	
-					{% endif %}
-					{% if x.rice == "k" %}
-					<td>3 kg rice,</td>	
-					{% endif %}
-					{% if x.rice == "l" %}
-					<td>5 kg rice,</td>	
-					{% endif %}
-					{% if x.rice == "z" %}
-					<td>10 kg rice,</td>	
+					{% if x.rice  %}
+					
+					<td>{{x.rice}} kg RICE,</td>	
 					{% endif %}
 
 					{% endif %}	
