--- a/templates/buy2.html
+++ b/templates/buy2.html
@@ -20,16 +20,14 @@
 
 <style type="text/css">
 		span {cursor:pointer; }
-		.number{
-			margin:100px;
-		}
+		
 		.minus, .plus{
 			width:30px;
-			height:30px;
-			background:#f2f2f2;
+			height:38px;
+			background:#1ad0f7;
 			border-radius:4px;
 			padding:8px 5px 8px 5px;
-			border:1px solid #ddd;
+			border:1px solid #262323;
       display: inline-block;
       vertical-align: middle;
       text-align: center;
@@ -40,7 +38,7 @@
       width: 100px;
       text-align: center;
       font-size: 26px;
-			border:5px solid #ddd;
+			border:5px solid #2f2626;
 			border-radius:4px;
       display: inline-block;
       vertical-align: middle;
@@ -113,37 +111,36 @@
 	<div class="row hs">
 		<div class="col-sm-2 col-md-2 pl col-lg-2 pl" >
 				
-				<div class="number">
+				
 					<span class="minus">-</span>
 					<input  name="milk" value="0"/>
 					<span class="plus" >+</span>
-				</div>
+				
 		</div>
 		<div class="col-sm-2 col-md-2 col-lg-2 pl" >
-					
-				<div class="number">
+			
 					<span class="minus">-</span>
 					<input  name="bread" value="0"/>
 					<span class="plus">+</span>
-				</div>
+				
 		</div>
 		<div class="col-sm-2 col-md-2 col-lg-2 pl" >
 
 					
-					<div class="number">
+					
 						<span class="minus">-</span>
 						<input  name="water" value="0"/>
 						<span class="plus">+</span>
-					</div>
+					
 		</div>
 		<div class="col-sm-2 col-md-2  col-lg-2 pl" >
 
 				
-					<div class="number">
+					
 						<span class="minus">-</span>
 						<input  name="rice" value="0"/>
 						<span class="plus">+</span>
-					</div>
+					
 		</div>
 </div>
 
