--- a/templates/base2.html
+++ b/templates/base2.html
@@ -29,6 +29,7 @@
 <!--===============================================================================================-->
 
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<link  href='https://fonts.googleapis.com/css?family=Kaushan Script' rel='stylesheet'>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
@@ -127,7 +128,7 @@ function hasScrolled() {
 </script>
 
 <header class="nav-down" style="z-index: 3">
-   <div class="top-line" style="color: #6666ff;line-height: 2.5;"> <b>SMART APP</b></div>
+   <div class="top-line" style="color:  #9999ff;line-height: 2.5;font-family: Kaushan Script"> <b>SMART APP</b></div>
   <div class="navigation " >
     
          <ul class="" style="float: right;">
