--- a/templates/display.html
+++ b/templates/display.html
@@ -19,7 +19,7 @@
 <div class="jumbotron" style="background-color:#a3c2c2">
 	<h1 style="font-family: 'Cormorant', serif;"><br><center>ORDERED ITEMS</center></h1>
     
-    <h3><center><a class="btn btn-primary  pl " href="/shop" style="float:left">BACK</a></center></h3>
+    <!-- <h3><center><a class="btn btn-primary  pl " href="/shop" style="float:left">BACK</a></center></h3> -->
 </div>
 <div class="container-fluid" style="padding-left: 15%;padding-right: 15%;">
 <div class="card p-3">
