--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
 					<div class="block1 wrap-pic-w">
 						<img src="{% static 'images/noti.png' %}" alt="IMG-BANNER" >
 
-						<a href="product.html" class="block1-txt ab-t-l s-full flex-col-l-sb p-lr-38 p-tb-34 trans-03 respon3">
+						<a href="/h" class="block1-txt ab-t-l s-full flex-col-l-sb p-lr-38 p-tb-34 trans-03 respon3">
 							<div class="block1-txt-child1 flex-col-l">
 								
 							</div>
