--- a/templates/show.html
+++ b/templates/show.html
@@ -16,8 +16,8 @@
 
 <div class="jumbotron" style="background-color:#a3c2c2">
 	<h1 style="font-family: 'Cormorant', serif;"><br><center>REQUESTED SERVICES</center></h1>
-    <hr>
-    <h3><a class="btn btn-primary  pl " href="/req" style="float:left">BACK</a></h3>
+    <!-- <hr>
+    <h3><a class="btn btn-primary  pl " href="/req" style="float:left">BACK</a></h3> -->
 </div>
 <div class="container-fluid" style="padding-left: 15%;padding-right: 15%;">
 <div class="card p-3">
