UI corrected errors

--- a/templates/base.html
+++ b/templates/base.html
@@ -168,10 +168,11 @@
 							<i class="zmdi zmdi-shopping-cart"></i>
 						</a>
 						</div>
-
+						
 						<a href="/show" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 " >
 							 <img src="{% static 'images/service.png' %}" alt="service" style="width:22px;height:26px;float:right; ">
 						</a>
+
 					</div>
 				</nav>
 			</div>	
@@ -195,10 +196,11 @@
 							<i class="zmdi zmdi-shopping-cart"></i>
 						</a>
 						</div>
-
+						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 " >
 						<a href="/show" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 " >
-							 <img src="{% static 'images/service.png' %}" alt="service" style="width:22px;height:26px;float:right; ">
+							 <img src="{% static 'images/service.png' %}" alt="service" style="width:22px;height:26px;">
 						</a>
+					</div>
 					</div>
 
 			<!-- Button show menu -->
