--- a/templates/pro.html
+++ b/templates/pro.html
@@ -41,11 +41,11 @@
               </span>
               <p class="stext-115 cl6 size-213 p-t-18">
               <span class="mtext-110 cl2">
-                Fisrtname : {{first_name}}
+                First Name : {{first_name}}
               </span></p>
               <p class="stext-115 cl6 size-213 p-t-18">
               <span class="mtext-110 cl2">
-                last_name : {{last_name}}
+                Last Name : {{last_name}}
               </span></p>
               
             </div>
