--- a/templates/base.html
+++ b/templates/base.html
@@ -98,7 +98,7 @@
 					<div class="right-top-bar flex-w h-full">
 						 {% if user.is_authenticated %}
 						<a href="#" class="flex-c-m trans-04 p-lr-25">
-							Hii {{user.username}}
+							Hii {{user.first_name}}
 						</a>
 
 						<a href="/profile" class="flex-c-m trans-04 p-lr-25">
@@ -225,7 +225,7 @@
 					<div class="right-top-bar flex-w h-full">
 						{% if user.is_authenticated %}
 						<a href="#" class="flex-c-m p-lr-10 trans-04">
-							hii {{user.username}}
+							hii {{user.first_name}}
 						</a>
 
 						<a href="/profile" class="flex-c-m p-lr-10 trans-04">
