--- a/templates/wall.html
+++ b/templates/wall.html
@@ -13,7 +13,7 @@
 <br>
 
  
-    <div class="container" style="margin-left: 15%">
+    <div class="container" style="margin-left: 15%;">
       <div class="row">
         <div class="col-md-8 col-lg-9 p-b-80">
           <div class="p-r-45 p-r-0-lg card p-b-30" >
